# book-engine

./: .gitattributes  .gitignore  .mailmap  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: content-schema.md
src/book_engine/: builder.py  cli.py  config.py  front_matter.py  models.py
src/book_engine/parsers/: chaptered_txt.py  gutenberg_txt.py  hyperion_txt.py
src/book_engine/profiles/: __init__.py  chaptered.py  epistolary.py
src/book_engine/renderers/: html.py
tests/: test_chaptered_profile.py  test_epistolary_profile.py  test_front_matter.py
